# NeuroNarrative

./: .dockerignore  .gitignore  GAUGE_FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  NEEDLE_FIX_SUMMARY.md  README.md  TIMELINE_NAVIGATION_ENHANCEMENTS.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py  schemas.py
backend/app/core/: config.py
backend/app/services/: analysis.py  events.py  storage.py  summary.py  transcript.py
backend/app/utils/: __init__.py  hardware.py
backend/tests/: test_health.py
docker/: backend.Dockerfile  compose.local.yml  frontend.Dockerfile
docs/: system-design.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  styles.css
frontend/src/components/: EventTimeline.tsx  RuleSelector.tsx  SignalPreview.tsx  UploadPanel.tsx
frontend/src/utils/: gsrParser.ts  logger.ts
