[project]
name = "neuronarrative-backend"
version = "0.1.0"
description = "FastAPI backend for NeuroNarrative multimodal analysis"
readme = "../README.md"
authors = [
    { name = "NeuroNarrative Team", email = "dev@example.com" }
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "python-multipart>=0.0.9",
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.11",
    "librosa>=0.10",
    "soundfile>=0.12",
    "ruptures>=1.1.9",
    "requests>=2.31",
    "python-dotenv>=1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0"
]
